--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   width: 500px;
   height: 500px;
   border-radius: 10px;
-  background-color: lightseagreen;
+  background-color: #0b7c77;
   display: flex;
   flex-direction: column;
   justify-content: center;
